fix: layout problems with Internet Explorer
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_4.x/Server/trunk@22126 99afaf0d-6903-0410-885a-c66a8bbb5f81

--- a/SpagoBICockpitEngine/WebContent/css/cockpit.css
+++ b/SpagoBICockpitEngine/WebContent/css/cockpit.css
@@ -52,7 +52,7 @@
 	.main-datasets-list .list-tab li.first{border-left:0}
 	.main-datasets-list .list-tab li.last{border-right:0}
 	.main-datasets-list .list-tab li.active{background-image:url(../img/bg-list-tab-active.gif)}
-	.main-datasets-list .list-tab a{font-family:cabinmedium, sans-serif;color:#A7A7A7;padding:10px 5px 0 5px;display:block;text-transform:uppercase;font-size:1em}
+	.main-datasets-list .list-tab a{font-family:cabinmedium, sans-serif;color:#A7A7A7;padding:10px 5px 10px 5px;display:block;text-transform:uppercase;font-size:1em}
 	/*.main-datasets-list .list-tab a{font-family:cabinmedium, sans-serif;color:#A7A7A7;height:20px;padding:10px 5px 0 5px;display:block;text-transform:uppercase;font-size:1em}*/
 	.main-datasets-list .list-tab .favourite a{padding-left:0;padding-right:0;width:65px;background:url(../img/bg-fav-list-tab.png) 23px 14px no-repeat;text-indent:-9999px;font-size:0;line-height:0;color:#fff}
 	.main-datasets-list .list-tab .favourite a:hover{background-position:23px -30px}
@@ -63,9 +63,9 @@
 	.list-tab a:hover{color:#838383}
 	
 	.main-datasets-list .list-actions .search-form .field input:focus{color:#3d90d4}
-	.list-actions-container{z-index:900;position:relative;width:100%;float:left;margin:0px 0px 30px 0px;padding:0px 0px 20px 0px;height:33px;background:#f9f9f9;}
-	.list-actions{float:right}
-	.list-actions .search-form{position:relative;margin:0 18px 0 0px;height:30px;float:left;background:#f5f5f5;border:1px solid #eae8e8;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;overflow:hidden}
+	.list-actions-container{z-index:900;position:relative;width:100%;/*float:left;*/margin:0px 0px 30px 0px;padding:0px 0px 20px 0px;height:120px;background:#f9f9f9;}
+	.list-actions{float:right;width:280px}
+	.list-actions .search-form{width:180px;position:relative;margin:0 18px 0 0px;height:30px;float:left;background:#f5f5f5;border:1px solid #eae8e8;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;overflow:hidden}
 	.list-actions .search-form fieldset{float:left}
 	.list-actions .search-form .field{float:left}
 	.list-actions .search-form .field label{display:none}
@@ -80,11 +80,11 @@
 	.main-datasets-list .list-actions .order li{float:none;display:none;border-top:0px solid #2e2e2e;border-bottom:0px solid #1f1f1f}
 	.main-datasets-list .list-actions .order li.active{display:block;border-top:0;border-bottom:0}
 	.main-datasets-list .list-actions .order:hover li{display:block;z-index:20000;}
-	.main-datasets-list .list-actions .order li a{z-index:90000;/*font-weight:bold;*/font-size:0.91em;background:#f5f5f5;color:#919191;/*text-transform:uppercase;*/font-family: 'Cabin', sans-serif;text-align:center;padding:12px 0 0 0;height:5px;display:block}
+	.main-datasets-list .list-actions .order li a{z-index:90000;/*font-weight:bold;*/font-size:0.91em;background:#f5f5f5;color:#919191;/*text-transform:uppercase;*/font-family: 'Cabin', sans-serif;text-align:center;padding:10px 0 0 0;height:11px;display:block}
 	.main-datasets-list .list-actions .order li.active a{0 0 no-repeat}
 	
 	
-	.box{margin:0 10px 10px 0;float:left;cursor:pointer;color:#434343;font-family: cabinregular, sans-serif;width:18%;/*min-height:305px;*/height:auto !important;/*height:205px;*/background:#fff;position:relative;border:1px solid #eeeeee;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}
+	.box{margin:0 10px 10px 0;float:left;cursor:pointer;color:#434343;font-family: cabinregular, sans-serif;width:18%;/*min-height:305px;*//*height:auto !important;*/height:250px;background:#fff;position:relative;border:1px solid #eeeeee;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}
 	.box .box-text{min-height:66px;height:auto !important;height:66px;position:relative;padding:0 2px 20px 2px}
 	.box .box-text-select{color:#25567F/*#3d90d4*/;font-family:cabinbold, sans-serif;}
 	.box h2{font-family:cabinmedium, sans-serif;line-height:100%;font-weight:bold;font-size:1.30em;margin:0 0 5px 0;
@@ -111,8 +111,8 @@
 	    }
 	*/
 	.box .box-container{color:#434343;padding:10px 4px;min-height:220px;max-height:220px;display:block;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}
-	.box .box-figure{/*margin-bottom:5px;margin-left:20px;*/width:100%;height:30%;Lposition:relative}
-	.box .box-figure img{width:100%;display:block}
+	.box .box-figure{/*margin-bottom:5px;margin-left:20px;*/width:100%;height:120px;Lposition:relative}
+	.box .box-figure img{width:100%;height:120px;display:block}
 	.box .box-figure .shadow{opacity:0.20;filter:alpha(opacity = 20);width:100%;height:100%;display:block;position:absolute;top:0;left:0;box-shadow:0 0 20px #000 inset}
 	.selectbox{opacity:0.85;filter:alpha(opacity = 85);display:block;top:0;left:0;box-shadow:0 0 20px #25567F inset;}
 	.selectboxDS{opacity:0.85;filter:alpha(opacity = 85);display:block;top:0;left:0;box-shadow:0 0 20px orange inset;}
